@@ -1,0 +1,6 @@
+#include <unistd.h>
+
+void _start(void) {
+	_exit(0);
+}
+
