@@ -57,6 +57,8 @@ are not entered into bugzilla tend to get forgotten about or ignored.
 489338  arm64: Instruction fcvtas should round 322.5 to 323, but result is 322.
 489676  vgdb handle EINTR and EAGAIN more consistently
 490651  Stop using -flto-partition=one
+491394  (vgModuleLocal_addDiCfSI): Assertion 'di->fsm.have_rx_map &&
+        di->fsm.rw_map_count' failed
 
 To see details of a given bug, visit
   https://bugs.kde.org/show_bug.cgi?id=XXXXXX
